--- a/client/package.json
+++ b/client/package.json
@@ -28,5 +28,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^2.9.1",
+    "enzyme-to-json": "^1.5.1",
+    "isomorphic-fetch": "^2.2.1",
+    "nock": "^9.0.14",
+    "react-test-renderer": "^15.6.1"
   }
 }
